<resources>
    <string name="titre">Projet de gestion</string>
    <string name="app_name">Projet gestion</string>
    <string name="employe">Ajouter employé</string>
    <string name="tache">Ajouter tâche</string>
    <string name="projet">Ajouter projet</string>
    <string name="view_employes">Voir liste employés</string>
    <string name="view_projects">Voir liste projets</string>
    <string name="view_tasks">Voir liste tâches</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="save_employe">Sauvegarder employé</string>
    <string name="save_task">Sauvegarder tâche</string>
    <string name="save_project">Sauvegarder projet</string>
    <string name="cancel">Annuler</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="motdepasse">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="connexion">Veuillez vous connecter</string>
    <string name="email">Adresse courriel</string>
    <string name="qualification">Qualification</string>
    <string name="title">Titre</string>
    <string name="name">Nom</string>
    <string name="description">Description</string>
    <string name="fileNumber">Numéro de fichier</string>
    <string name="tempsEstimer">Temps estimé</string>
    <string name="infoIncorrecte">Les informations entrées sont incorrectes...Réessayez!</string>

</resources>