<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#C1BFBF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="#4CAF50">
        <TextView
            android:layout_width="410dp"
            android:layout_height="100dp"
            android:text="@string/titre"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp">
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/employe"
        android:textAlignment="center"
        android:backgroundTint="#3AB13F"
        android:onClick="addemploye"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/tache"
        android:textAlignment="center"
        android:backgroundTint="#3AB13F"
        android:onClick="addtask"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/projet"
        android:textAlignment="center"
        android:backgroundTint="#3AB13F"
        android:onClick="addproject"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="60dp">
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/view_employes"
            android:textAlignment="center"
            android:backgroundTint="#3AB13F"
            android:onClick="list_employes"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/view_tasks"
            android:textAlignment="center"
            android:backgroundTint="#3AB13F"
            android:onClick="list_tasks"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/view_projects"
            android:textAlignment="center"
            android:backgroundTint="#3AB13F"
            android:onClick="list_projects"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>