<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C1BFBF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utilisateur"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#79F2F2F2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/user"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motdepasse"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#79F2F2F2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:id="@+id/mdp"
        android:inputType="textPassword"
        android:textSize="30sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:id="@+id/login"
        android:backgroundTint="#4CAF50"/>

</LinearLayout>